src/main/java/com/es/weso/amrdf/antlr/AmrdfParser.java
// Generated from Amrdf.g4 by ANTLR 4.7.1

    package com.es.weso.amrdf.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AmrdfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, LEFT_BRACE=2, RIGHT_BRACE=3, SLASH=4, COLON=5, DASH=6, ARG0=7, 
		ARG0OF=8, ARG1=9, ARG1OF=10, ARG2=11, ARG2OF=12, ARG3=13, ARG3OF=14, ARG4=15, 
		ARG4OF=16, DOMAIN=17, DOMAINOF=18, NAME=19, CONSISTOF=20, WIKI=21, MODEOF=22, 
		MODOF=23, MOD=24, MODE=25, LOCATION=26, DEGREE=27, SOURCE=28, DESTINATION=29, 
		PATH=30, BENEFICIARY=31, ACCOMPANIER=32, TOPIC=33, DURATION=34, INSTRUMENT=35, 
		MEDIUM=36, MANNER=37, PURPOSE=38, CAUSE=39, CONCESSION=40, CONDITION=41, 
		PART=42, SUBEVENT=43, EXAMPLE=44, DIRECTION=45, FREQUENCY=46, EXTENT=47, 
		POSS=48, UNIT=49, POLARITY=50, QUANT=51, TIME=52, YEAR=53, CONSIST=54, 
		LOCATIONOF=55, DEGREEOF=56, SOURCEOF=57, DESTINATIONOF=58, PATHOF=59, 
		BENEFICIARYOF=60, ACCOMPANIEROF=61, TOPICOF=62, DURATIONOF=63, INSTRUMENTOF=64, 
		MEDIUMOF=65, MANNEROF=66, PURPOSEOF=67, CAUSEOF=68, CONCESSIONOF=69, CONDITIONOF=70, 
		PARTOF=71, SUBEVENTOF=72, EXAMPLEOF=73, DIRECTIONOF=74, FREQUENCYOF=75, 
		EXTENTOF=76, POSSOF=77, QUANTOF=78, NAMEOF=79, UNITOF=80, OP1=81, OP2=82, 
		OP3=83, OP4=84, OP1OF=85, OP2OF=86, OP3OF=87, OP4OF=88, AMRUNKNOWN=89, 
		TEXT=90, COMMENT=91, WS=92;
	public static final int
		RULE_amrset = 0, RULE_amr = 1, RULE_text = 2, RULE_terminal = 3, RULE_varName = 4, 
		RULE_varType = 5, RULE_coreRule = 6, RULE_nonCoreRule = 7, RULE_arg0 = 8, 
		RULE_arg1 = 9, RULE_arg2 = 10, RULE_arg3 = 11, RULE_arg4 = 12, RULE_arg0Of = 13, 
		RULE_arg1Of = 14, RULE_arg2Of = 15, RULE_arg3Of = 16, RULE_arg4Of = 17, 
		RULE_domain = 18, RULE_name = 19, RULE_wiki = 20, RULE_mod = 21, RULE_modeRule = 22, 
		RULE_location = 23, RULE_degree = 24, RULE_source = 25, RULE_destination = 26, 
		RULE_path = 27, RULE_beneficiary = 28, RULE_accompanier = 29, RULE_topic = 30, 
		RULE_duration = 31, RULE_instrument = 32, RULE_medium = 33, RULE_manner = 34, 
		RULE_purpose = 35, RULE_cause = 36, RULE_concession = 37, RULE_condition = 38, 
		RULE_part = 39, RULE_subevent = 40, RULE_example = 41, RULE_direction = 42, 
		RULE_frequency = 43, RULE_extent = 44, RULE_poss = 45, RULE_unit = 46, 
		RULE_polarity = 47, RULE_quant = 48, RULE_time = 49, RULE_year = 50, RULE_consist = 51, 
		RULE_consistOf = 52, RULE_domainOf = 53, RULE_modeOf = 54, RULE_modOf = 55, 
		RULE_locationOf = 56, RULE_degreeOf = 57, RULE_sourceOf = 58, RULE_destinationOf = 59, 
		RULE_pathOf = 60, RULE_beneficiaryOf = 61, RULE_accompanierOf = 62, RULE_topicOf = 63, 
		RULE_durationOf = 64, RULE_instrumentOf = 65, RULE_mediumOf = 66, RULE_mannerOf = 67, 
		RULE_purposeOf = 68, RULE_causeOf = 69, RULE_concessionOf = 70, RULE_conditionOf = 71, 
		RULE_partOf = 72, RULE_subeventOf = 73, RULE_exampleOf = 74, RULE_directionOf = 75, 
		RULE_frequencyOf = 76, RULE_extentOf = 77, RULE_possOf = 78, RULE_quantOf = 79, 
		RULE_nameOf = 80, RULE_unitOf = 81, RULE_op1 = 82, RULE_op2 = 83, RULE_op3 = 84, 
		RULE_op4 = 85, RULE_op1Of = 86, RULE_op2Of = 87, RULE_op3Of = 88, RULE_op4Of = 89;
	public static final String[] ruleNames = {
		"amrset", "amr", "text", "terminal", "varName", "varType", "coreRule", 
		"nonCoreRule", "arg0", "arg1", "arg2", "arg3", "arg4", "arg0Of", "arg1Of", 
		"arg2Of", "arg3Of", "arg4Of", "domain", "name", "wiki", "mod", "modeRule", 
		"location", "degree", "source", "destination", "path", "beneficiary", 
		"accompanier", "topic", "duration", "instrument", "medium", "manner", 
		"purpose", "cause", "concession", "condition", "part", "subevent", "example", 
		"direction", "frequency", "extent", "poss", "unit", "polarity", "quant", 
		"time", "year", "consist", "consistOf", "domainOf", "modeOf", "modOf", 
		"locationOf", "degreeOf", "sourceOf", "destinationOf", "pathOf", "beneficiaryOf", 
		"accompanierOf", "topicOf", "durationOf", "instrumentOf", "mediumOf", 
		"mannerOf", "purposeOf", "causeOf", "concessionOf", "conditionOf", "partOf", 
		"subeventOf", "exampleOf", "directionOf", "frequencyOf", "extentOf", "possOf", 
		"quantOf", "nameOf", "unitOf", "op1", "op2", "op3", "op4", "op1Of", "op2Of", 
		"op3Of", "op4Of"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\"'", "'('", "')'", "'/'", "':'", "'-'", null, null, null, null, 
		null, null, null, null, null, null, "':domain'", "':domain-of'", "':name'", 
		"':consist-of'", "':wiki'", "':mode-of'", "':mod-of'", "':mod'", "':mode'", 
		"':location'", "':degree'", "':source'", "':destination'", "':path'", 
		"':beneficiary'", "':accompanier'", "':topic'", "':duration'", "':instrument'", 
		"':medium'", "':manner'", "':purpose'", "':cause'", "':concession'", "':condition'", 
		"':part'", "':subevent'", "':example'", "':direction'", "':frequency'", 
		"':extent'", "':poss'", "':unit'", "':polarity'", "':quant'", "':time'", 
		"':year'", "':consist'", "':location-of'", "':degree-of'", "':source-of'", 
		"':destination-of'", "':path-of'", "':beneficiary-of'", "':accompanier-of'", 
		"':topic-of'", "':duration-of'", "':instrument-of'", "':medium-of'", "':manner-of'", 
		"':purpose-of'", "':cause-of'", "':concession-of'", "':condition-of'", 
		"':part-of'", "':subevent-of'", "':example-of'", "':direction-of'", "':frequency-of'", 
		"':extent-of'", "':poss-of'", "':quant-of'", "':name-of'", "':unit-of'", 
		"':op1'", "':op2'", "':op3'", "':op4'", "':op1-of'", "':op2-of'", "':op3-of'", 
		"':op4-of'", "'amr-unknown'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "LEFT_BRACE", "RIGHT_BRACE", "SLASH", "COLON", "DASH", "ARG0", 
		"ARG0OF", "ARG1", "ARG1OF", "ARG2", "ARG2OF", "ARG3", "ARG3OF", "ARG4", 
		"ARG4OF", "DOMAIN", "DOMAINOF", "NAME", "CONSISTOF", "WIKI", "MODEOF", 
		"MODOF", "MOD", "MODE", "LOCATION", "DEGREE", "SOURCE", "DESTINATION", 
		"PATH", "BENEFICIARY", "ACCOMPANIER", "TOPIC", "DURATION", "INSTRUMENT", 
		"MEDIUM", "MANNER", "PURPOSE", "CAUSE", "CONCESSION", "CONDITION", "PART", 
		"SUBEVENT", "EXAMPLE", "DIRECTION", "FREQUENCY", "EXTENT", "POSS", "UNIT", 
		"POLARITY", "QUANT", "TIME", "YEAR", "CONSIST", "LOCATIONOF", "DEGREEOF", 
		"SOURCEOF", "DESTINATIONOF", "PATHOF", "BENEFICIARYOF", "ACCOMPANIEROF", 
		"TOPICOF", "DURATIONOF", "INSTRUMENTOF", "MEDIUMOF", "MANNEROF", "PURPOSEOF", 
		"CAUSEOF", "CONCESSIONOF", "CONDITIONOF", "PARTOF", "SUBEVENTOF", "EXAMPLEOF", 
		"DIRECTIONOF", "FREQUENCYOF", "EXTENTOF", "POSSOF", "QUANTOF", "NAMEOF", 
		"UNITOF", "OP1", "OP2", "OP3", "OP4", "OP1OF", "OP2OF", "OP3OF", "OP4OF", 
		"AMRUNKNOWN", "TEXT", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Amrdf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AmrdfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AmrsetContext extends ParserRuleContext {
		public List<AmrContext> amr() {
			return getRuleContexts(AmrContext.class);
		}
		public AmrContext amr(int i) {
			return getRuleContext(AmrContext.class,i);
		}
		public AmrsetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_amrset; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).enterAmrset(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).exitAmrset(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmrdfVisitor ) return ((AmrdfVisitor<? extends T>)visitor).visitAmrset(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AmrsetContext amrset() throws RecognitionException {
		AmrsetContext _localctx = new AmrsetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_amrset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(180);
				amr();
				}
				}
				setState(183); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LEFT_BRACE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AmrContext extends ParserRuleContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public List<CoreRuleContext> coreRule() {
			return getRuleContexts(CoreRuleContext.class);
		}
		public CoreRuleContext coreRule(int i) {
			return getRuleContext(CoreRuleContext.class,i);
		}
		public List<NonCoreRuleContext> nonCoreRule() {
			return getRuleContexts(NonCoreRuleContext.class);
		}
		public NonCoreRuleContext nonCoreRule(int i) {
			return getRuleContext(NonCoreRuleContext.class,i);
		}
		public AmrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_amr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).enterAmr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).exitAmr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmrdfVisitor ) return ((AmrdfVisitor<? extends T>)visitor).visitAmr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AmrContext amr() throws RecognitionException {
		AmrContext _localctx = new AmrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_amr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(LEFT_BRACE);
			setState(186);
			varName();
			setState(187);
			match(SLASH);
			setState(188);
			varType();
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ARG0) | (1L << ARG0OF) | (1L << ARG1) | (1L << ARG1OF) | (1L << ARG2) | (1L << ARG2OF) | (1L << ARG3) | (1L << ARG3OF) | (1L << ARG4) | (1L << ARG4OF) | (1L << DOMAIN) | (1L << DOMAINOF) | (1L << NAME) | (1L << CONSISTOF) | (1L << WIKI) | (1L << MODEOF) | (1L << MODOF) | (1L << MOD) | (1L << MODE) | (1L << LOCATION) | (1L << DEGREE) | (1L << SOURCE) | (1L << DESTINATION) | (1L << PATH) | (1L << BENEFICIARY) | (1L << ACCOMPANIER) | (1L << TOPIC) | (1L << DURATION) | (1L << INSTRUMENT) | (1L << MEDIUM) | (1L << MANNER) | (1L << PURPOSE) | (1L << CAUSE) | (1L << CONCESSION) | (1L << CONDITION) | (1L << PART) | (1L << SUBEVENT) | (1L << EXAMPLE) | (1L << DIRECTION) | (1L << FREQUENCY) | (1L << EXTENT) | (1L << POSS) | (1L << UNIT) | (1L << POLARITY) | (1L << QUANT) | (1L << TIME) | (1L << YEAR) | (1L << CONSIST) | (1L << LOCATIONOF) | (1L << DEGREEOF) | (1L << SOURCEOF) | (1L << DESTINATIONOF) | (1L << PATHOF) | (1L << BENEFICIARYOF) | (1L << ACCOMPANIEROF) | (1L << TOPICOF) | (1L << DURATIONOF))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (INSTRUMENTOF - 64)) | (1L << (MEDIUMOF - 64)) | (1L << (MANNEROF - 64)) | (1L << (PURPOSEOF - 64)) | (1L << (CAUSEOF - 64)) | (1L << (CONCESSIONOF - 64)) | (1L << (CONDITIONOF - 64)) | (1L << (PARTOF - 64)) | (1L << (SUBEVENTOF - 64)) | (1L << (EXAMPLEOF - 64)) | (1L << (DIRECTIONOF - 64)) | (1L << (FREQUENCYOF - 64)) | (1L << (EXTENTOF - 64)) | (1L << (POSSOF - 64)) | (1L << (QUANTOF - 64)) | (1L << (NAMEOF - 64)) | (1L << (UNITOF - 64)) | (1L << (OP1 - 64)) | (1L << (OP2 - 64)) | (1L << (OP3 - 64)) | (1L << (OP4 - 64)) | (1L << (OP1OF - 64)) | (1L << (OP2OF - 64)) | (1L << (OP3OF - 64)) | (1L << (OP4OF - 64)))) != 0)) {
				{
				setState(191);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ARG0:
				case ARG0OF:
				case ARG1:
				case ARG1OF:
				case ARG2:
				case ARG2OF:
				case ARG3:
				case ARG3OF:
				case ARG4:
				case ARG4OF:
					{
					setState(189);
					coreRule();
					}
					break;
				case DOMAIN:
				case DOMAINOF:
				case NAME:
				case CONSISTOF:
				case WIKI:
				case MODEOF:
				case MODOF:
				case MOD:
				case MODE:
				case LOCATION:
				case DEGREE:
				case SOURCE:
				case DESTINATION:
				case PATH:
				case BENEFICIARY:
				case ACCOMPANIER:
				case TOPIC:
				case DURATION:
				case INSTRUMENT:
				case MEDIUM:
				case MANNER:
				case PURPOSE:
				case CAUSE:
				case CONCESSION:
				case CONDITION:
				case PART:
				case SUBEVENT:
				case EXAMPLE:
				case DIRECTION:
				case FREQUENCY:
				case EXTENT:
				case POSS:
				case UNIT:
				case POLARITY:
				case QUANT:
				case TIME:
				case YEAR:
				case CONSIST:
				case LOCATIONOF:
				case DEGREEOF:
				case SOURCEOF:
				case DESTINATIONOF:
				case PATHOF:
				case BENEFICIARYOF:
				case ACCOMPANIEROF:
				case TOPICOF:
				case DURATIONOF:
				case INSTRUMENTOF:
				case MEDIUMOF:
				case MANNEROF:
				case PURPOSEOF:
				case CAUSEOF:
				case CONCESSIONOF:
				case CONDITIONOF:
				case PARTOF:
				case SUBEVENTOF:
				case EXAMPLEOF:
				case DIRECTIONOF:
				case FREQUENCYOF:
				case EXTENTOF:
				case POSSOF:
				case QUANTOF:
				case NAMEOF:
				case UNITOF:
				case OP1:
				case OP2:
				case OP3:
				case OP4:
				case OP1OF:
				case OP2OF:
				case OP3OF:
				case OP4OF:
					{
					setState(190);
					nonCoreRule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(196);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(AmrdfParser.TEXT, 0); }
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).exitText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmrdfVisitor ) return ((AmrdfVisitor<? extends T>)visitor).visitText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_text);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			match(T__0);
			setState(199);
			match(TEXT);
			setState(200);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalContext extends ParserRuleContext {
		public AmrContext amr() {
			return getRuleContext(AmrContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public TerminalNode TEXT() { return getToken(AmrdfParser.TEXT, 0); }
		public TerminalNode DASH() { return getToken(AmrdfParser.DASH, 0); }
		public TerminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).enterTerminal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).exitTerminal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmrdfVisitor ) return ((AmrdfVisitor<? extends T>)visitor).visitTerminal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminalContext terminal() throws RecognitionException {
		TerminalContext _localctx = new TerminalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_terminal);
		try {
			setState(206);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFT_BRACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(202);
				amr();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(203);
				text();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(204);
				match(TEXT);
				}
				break;
			case DASH:
				enterOuterAlt(_localctx, 4);
				{
				setState(205);
				match(DASH);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(AmrdfParser.TEXT, 0); }
		public TerminalNode DASH() { return getToken(AmrdfParser.DASH, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AmrdfListener ) ((AmrdfListener)listener).exitVarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AmrdfVisitor ) return ((AmrdfVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			_la = _input.LA(1);
			if ( !(_la==DASH || _la==TEXT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
